# ddyum

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  env.sample  pyproject.toml  web.Dockerfile
.github/workflows/: ci.yaml
src/: conftest.py  main.py
src/auth/: dependencies.py  email_utils.py  routers.py  schemas.py  utils.py
src/auth/tasks/: tasks.py
src/base/: email_utils.py  schemas.py  services.py  templates.py
src/bookings/: models.py  routers.py  schemas.py  services.py  utils.py
src/config/: db.py  settings.py  worker.py
src/database/: __init__.py  db.py
src/database/migrations/: env.py
src/database/migrations/versions/: 2023_09_13_2359-3158bb94ae81_create_user_table.py  2023_09_21_2235-db78b0bb0a70_create_profile_table.py  2023_09_26_1417-d935d0c97b7e_add_first_name_to_profile_table.py  2023_09_29_2021-2f8a18ec7d08_create_table_for_booking_type_and_.py  2023_09_30_1347-a8d1f055ee70_add_null_constraint_to_booking_type_.py  2023_10_03_2318-520835442a7d_remove_phone_field_from_profile.py  3852b041934e_create_user_table.py
src/exceptions/: http_exceptions.py
src/services/: base.py
src/tasks/: tasks.py
src/templates/: booking_email.html  email.html
src/tests/: conftest.py  mock_booking_type.json  mock_profile.json  mock_users.json
src/tests/test_auth/: test_api.py  test_send_email.py
src/tests/test_booking/: test_api.py
src/tests/test_booking_type/: test_api.py
src/tests/test_user/: test_api.py
src/users/: models.py  routers.py  schemas.py  services.py  utils.py
