[tool.poetry]
name = "ddyum"
version = "0.1.0"
description = ""
authors = ["RG1ee <niwows@yandex.ru>"]
packages = [
  {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
fastapi = "^0.103.1"
pydantic = "^2.3.0"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
pydantic-settings = "^2.0.3"
python-dateutil = "^2.8.2"
passlib = "^1.7.4"
email-validator = "^2.0.0.post2"
celery = "^5.3.4"
redis = "^5.0.0"
python-jose = "^3.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
ruff = "^0.0.287"
black = "^23.9.1"
pytest = "^7.4.2"
aiosqlite = "^0.19.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["F403", "F405"]
exclude = [
    "migrations",
    ".direnv",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "venv",
    "__pypackages__",
    "dist",
    "node_modules",
]
line-length = 120

[tool.pytest.ini_options]
python_path = "src"
asyncio_mode = "auto"
python_files = ["*_test.py", "test_*.py", "*_tests.py"]
